Fixed stock widget sizing to be more readable

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -485,7 +485,7 @@ body {
 }
 
 .tradingview-widget-container {
-  height: 450px;
+  height: 300px;
 }
 
 /* ---------- Responsive ---------- */
